--- a/style.css
+++ b/style.css
@@ -4,34 +4,50 @@
     --color-white: #ffffff;
     --color-light-white: #eeeeee;
     --color-dark-white: #bdbdbd;
-    --color-pink: #fe918d;
-    --color-dark-pink: #ff6863;
+    --color-blue: #6ca0dc;
+    --color-dark-blue: #2761a4;
     --color-black: #000000;
     --color-dark-grey: #4d4d4d;
     --color-grey: #616161;
     --color-light-grey: #7c7979;
-    --color-blue: #73aace;
+    --color-pink: #e98af2;
     --color-yellow: #fff7d1;
     --color-orange: #feb546;
 
     /* Font size */
-    --font-large: 48px;
-    --font-medium: 28px;
-    --font-regular: 18px;
-    --font-small: 16px;
-    --font-micro: 14px;
+    --font-large: 3rem;
+    --font-medium: 1.75rem;
+    --font-regular: 1.125rem;
+    --font-small: 1rem;
+    --font-micro: 0.875rem;
     /* Font weight */
     --weight-bold: 700;
     --weight-semi-bold: 600;
     --weight-regular: 400;
 
     /* Size */
-
+    --size-border-radius: 4px;
 }
 
 /* Universal tags */
 * {
     box-sizing: border-box;
+}
+
+body {
+    font-family: 'Open Sans', sans-serif;
+    margin: 0;
+    cursor: default;
+}
+
+a {
+    text-decoration: none;
+    color: var(--color-white);
+}
+
+ul {
+    list-style: none;
+    padding-left: 0;
 }
 
 /* Typography */
@@ -51,14 +67,50 @@ h2 {
 
 h3 {
     font-size: var(--font-regular);
-    font-weight: var(--font-regular);
+    font-weight: var(--weight-regular);
     color: var(--color-black);
     margin: 8px 0;
 }
 
 p {
     font-size: var(--font-regular);
-    font-weight: var(--font-regular);
+    font-weight: var(--weight-regular);
     color: var(--color-black);
     margin: 4px 0; 
+}
+
+/* Navbar */
+#navbar {
+    display: flex;
+    justify-content: space-between;
+    background-color: var(--color-blue);
+    align-items: center;
+    color: var(--color-white);
+    padding: 16px;
+
+}
+
+.navbar__menu {
+    display: flex;
+
+}
+
+.nevbar_logo {
+    font-size: medium;
+    font-weight: var(--weight-semi-bold);
+}
+
+.navbar__menu__item {
+    padding: 8px 12px;
+    margin: 0 4px;
+    cursor: pointer;
+    border-radius: var(--size-border-radius);
+}
+
+.navbar__menu__item.active {
+    border: 1px solid var(--color-white);
+    border-radius: var(--size-border-radius);
+}
+.navbar__menu__item:hover {
+    background-color: var(--color-dark-blue);
 }
