--- a/style.css
+++ b/style.css
@@ -165,6 +165,10 @@ p {
 .section {
     text-align: center;
     padding: 50px;
+    margin: auto;
+}
+
+.section__container {
     max-width: 1200px;
     margin: auto;
 }
@@ -228,4 +232,60 @@ p {
 
 .job__period {
     font-size: var(--font-small);
+}
+
+/* Skill */
+
+#skills {
+    background-color: var(--color-yellow);
+}
+
+.skillset {
+    display: flex;
+    background-color: var(--color-light-grey);
+    color: var(--color-white);
+    margin: 20px 0;
+}
+
+.skillset__title {
+    color: var(--color-white);
+}
+
+.skillset__left {
+    flex-basis: 60%;
+    background-color: var(--color-dark-grey);
+    padding: 20px 40px;
+}
+
+.skill{
+    margin-bottom: 32px;
+}
+
+.skill__bar {
+    width: 100%;
+    height: 3px;
+    background-color: var(--color-grey);
+}
+
+.skill__value {
+    height: 3px;
+    background-color: var(--color-orange);
+}
+
+.skillset__right {
+    flex-basis: 40%;
+}
+
+.skill__description {
+    display: flex;
+    justify-content: space-between;
+}
+
+.tools {
+    background-color: var(--color-grey);
+}
+
+.tools, 
+.etc {
+    padding: 20px;
 }
