--- a/style.css
+++ b/style.css
@@ -92,13 +92,21 @@ p {
 
 /* Navbar */
 #navbar {
+    position: fixed;
+    width: 100%;
     display: flex;
     justify-content: space-between;
-    background-color: var(--color-blue);
+    background-color: transparent;
     align-items: center;
     color: var(--color-white);
     padding: 16px;
+    transition: all var(--animation-duration) ease-in-out;
+    z-index: 1;
+}
 
+#navbar.navbar--dark {
+    background-color: var(--color-blue);
+    padding: 8px;
 }
 
 .navbar__menu {
@@ -139,6 +147,7 @@ p {
 #home {
     background: url('imgs/home-background.png') center/cover no-repeat;
     padding: 40px;
+    padding-top: 120px;
     text-align: center;
 }
 
