--- a/style.css
+++ b/style.css
@@ -102,6 +102,7 @@ p {
     padding: 16px;
     transition: all var(--animation-duration) ease-in-out;
     z-index: 1;
+    height: 7%;
 }
 
 #navbar.navbar--dark {
