--- a/style.css
+++ b/style.css
@@ -472,6 +472,27 @@ p {
     transition: all var(--animation-duration) ease-in;
 }
 
+/* Scroll */
+.arrow-up {
+    position: fixed;
+    bottom: 40px;
+    right: 20px;
+    width: 50px;
+    height: 50px;
+    font-size: 40px;
+    background-color: var(--color-blue);
+    color: var(--color-white);
+    border-radius: 50%;
+    opacity: 0;
+    transition: opacity var(--animation-duration) ease-in;
+    pointer-events: none;
+}
+
+.arrow-up.visible {
+    opacity: 1;
+    pointer-events: auto;
+}
+
 
 /* For below 768px screen width */
 @media screen and (max-width: 768px) {
