--- a/style.css
+++ b/style.css
@@ -103,6 +103,7 @@ p {
     transition: all var(--animation-duration) ease-in-out;
     z-index: 1;
     height: 7%;
+    background-color: var(--color-blue);
 }
 
 #navbar.navbar--dark {
@@ -112,7 +113,6 @@ p {
 
 .navbar__menu {
     display: flex;
-
 }
 
 .nevbar_logo {
@@ -396,7 +396,7 @@ p {
 }
 
 .project__description h3{
-    color: var(--color-white);
+    color: var(--color-orange);
 }
 
 .project__description h3:after {
@@ -404,9 +404,9 @@ p {
     position: relative;
     left: 50%;
     content: '';
-    width: 25px;
+    width: 50px;
     height: 7px;
-    margin-left: -12px;
+    transform: translateX(-50%);
     margin-top: 8px;
     background-color: var(--color-dark-white);
 }
@@ -519,6 +519,11 @@ p {
         text-align: center;
         width: 100%;
         display: none;;
+    }
+
+    .navbar__menu.open {
+        display: block;
+        background-color: var(--color-blue);
     }
 
     .about__majors {
